# Submit

./: README.md  Submit.cabal  stack.yaml
app/: Main.hs
assets/: index.html  nav.js
assets/files/: servant-multipart20032-0.buf  servant-multipart24212-0.buf  servant-multipart26490-2.buf  servant-multipart26490-4.buf
database/: data.sql  tables.sql
src/Submit/: Config.hs  Logger.hs  Models.hs  Server.hs
src/Submit/API/: Assignment.hs  Assignments.hs  Courses.hs  Students.hs  Submissions.hs  Teachers.hs
