name:                Submit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Submit#readme
license:             BSD3
license-file:        LICENSE
author:              Rik van Toor
maintainer:          rik@rikvantoor.nl
copyright:           2018 Rik van Toor 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Submit.Server
                     , Submit.Models
                     , Submit.Config
                     , Submit.Logger
                     , Submit.API.Teachers
                     , Submit.API.Courses
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , monad-control
                     , monad-logger
                     , monad-metrics
                     , natural-transformation
                     , fast-logger
                     , katip >= 0.5.0.2 && < 0.6
                     , servant-server
                     , servant-auth-server >= 0.3.2.0
                     , wai
                     , wai-extra
                     , bytestring
                     , transformers
                     , safe
                     , warp
                     , text
                     , time
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , esqueleto >= 2.5.3
  default-language:    Haskell2010

executable Submit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Submit
                     , persistent-postgresql
                     , servant-auth-server >= 0.3.2.0
                     , servant-server
                     , wai
                     , warp
                     , monad-logger
                     , safe
                     , monad-metrics
                     , wai-middleware-metrics
                     , microlens
                     , ekg
                     , ekg-core
  default-language:    Haskell2010

test-suite Submit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Submit
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Submit
